--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
             rel="apple-touch-icon"
             href="/assets/icons/apple-touch-icon.png"
         />
-        <link rel="shortcut icon" href="/favicon.png" />
+        <link rel="shortcut icon" href="/assets/favicon.png" />
         <% preact.headEnd %>
     </head>
     <body>
