--- a/src/template.html
+++ b/src/template.html
@@ -11,6 +11,10 @@
             href="/assets/icons/apple-touch-icon.png"
         />
         <link rel="shortcut icon" href="/assets/favicon.png" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
         <% preact.headEnd %>
     </head>
     <body>
