--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Join an intellectual horror literature community and get
+      access to high quality writen stories and audiobooks
+      based on real life places and events. Subscribe to
+      updates and be the first to know when its live."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
